--- a/_posts/2020-01-02-the-us-narrative-today.html
+++ b/_posts/2020-01-02-the-us-narrative-today.html
@@ -1828,107 +1828,107 @@ stories:
   domain: http://www.theexaminer.com/
   link: http://theexaminer.com/stories/news/student-disciplined-bringing-toy-gun-school
 images:
-- name: white-house-lawn-white-house-window-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-dark-dali.jpg
-- name: downtown-los-angeles-downtown-la-creativity.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-creativity.JPG
-- name: bluelake-dark-rain-file-00-00-38-67.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-dark-rain-file-00-00-38-67.jpg
-- name: copper-circuit-dark-tower-of-london.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-dark-tower-of-london.jpg
-- name: art-museum-art-museum-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-dali-two.jpg
-- name: border-crossing-bordercrossing-kandinsky-bv.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-kandinsky-bv.png
-- name: powerlines-power-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-crabapple.jpg
-- name: gypsy-wagon-gypsywagon-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-dali-two.jpg
-- name: capital-battle-capitolbattle-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-ww2-dresden.jpg
-- name: old-granary-field-oldhouse-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-blue-brush.jpg
-- name: fence-fence-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-sunday.jpg
-- name: razorwire-DSC-0080-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-alberto-giacometti.jpg
-- name: meadowbutterfly-meadow-butterfly-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-blue-brush.jpg
-- name: gypsymosaic-gypsy-eyes-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-constitution.jpg
-- name: nyc-flag-nycflag-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-graham-sutherland.jpg
-- name: bluelake-hot-spicy-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-hot-spicy-file-00-00-00-00.jpg
-- name: machine-road-machine-road-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-rainbow-festival.jpg
-- name: docks-docks-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-rainbow-festival.jpg
-- name: bf-skinner-border-fence-down-the-line.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-border-fence-down-the-line.jpg
-- name: containership-containership-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-colored-circuits.jpg
-- name: la-muse-crow-stkump-waterfront.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-crow-stkump-waterfront.jpg
-- name: beach-rocks-beach-rocks-currents-copper-circuit-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-copper-circuit-2.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-creativity.jpg
-- name: birdhouse-birdhouse-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-gan-vogh.jpg
-- name: legal-statue-legalstatue-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-plentiful.jpg
-- name: stalin-time-gauge-on-aircraft-carrier.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-gauge-on-aircraft-carrier.jpg
-- name: nyc-flag-api-conversations-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-api-conversations-atari-asteroids.jpg
-- name: school-clouds-church-clouds-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-mucha-mult.jpg
-- name: carry-load-carryload-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-creativity.jpg
-- name: old-door-lock-old-door-lock-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2.jpg
-- name: power-lines-power-lines-empty-space-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-yellow-paper.jpg
-- name: gears-4882162452-fa3126b38d-b-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-crafty-painting.jpg
-- name: nyc-flag-nycflag-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-gred-mash.jpg
-- name: docks-docks-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-spagetti-accident.jpg
-- name: stories-los-angeles-downtow-freeway-blue-circuit-5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-los-angeles-downtow-freeway-blue-circuit-5.jpg
-- name: dc-statue-dcstatue-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-yellow-collage.jpg
-- name: lincoln-memorial-lincolnmemorial-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-green-zuma.jpg
-- name: border-crossing-bordercrossing-constitution.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-constitution.png
-- name: oldhousecars-house-old-cars-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-creativity.jpg
-- name: art-museum-art-museum-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-post-modern.jpg
-- name: hollywood-building-hollywood-building-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-purp-paper.jpg
-- name: wall-cannon-wall-cannon-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wall-cannon-wall-cannon-dark-dali.jpg
-- name: power-lines-power-lines-empty-space-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-crabapple.jpg
-- name: nazi-invasion-capital-records-building.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-capital-records-building.jpg
-- name: paris-paris-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-green-zuma.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-sunday.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-sunday.JPG
-- name: crow_sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_sunday.jpg
-- name: powerlines-power-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-clean-view.jpg
-- name: stories-new-75-125-800-500-0-max-0-1-1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-75-125-800-500-0-max-0-1-1.jpg
-- name: old-door-lock-old-door-lock-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-dali-three.jpg
-- name: razorwire-DSC-0080-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-really-hot.jpg
+- name: locked-up-steam-lock-up-steam-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-dali-three.jpg
+- name: paris-paris-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-gred-mash.jpg
+- name: containership-containership-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-dark-dali.jpg
+- name: old-barn-old-barn-1500-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-alberto-giacometti.jpg
+- name: blossombar-oily-mcoilface-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-oily-mcoilface-file-00-00-00-00.jpg
+- name: old-cabin-oldcabin-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-constitution.jpg
+- name: oldroad-old-road-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-creativity.jpg
+- name: store-on-corner-store-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-atari-missle.jpg
+- name: 35201856153_61bc075e4b-rain-princess.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/35201856153_61bc075e4b-rain-princess.jpg
+- name: beach-clouds-lifeguard-beachclouds-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-oily-mcoilface.jpg
+- name: old-granary-field-oldhouse-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-dry-skin.jpg
+- name: dragon-desert-desert-dragon-propaganda-leaflets.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-propaganda-leaflets.jpg
+- name: white-house-whitehouse-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-smooth-ride.jpg
+- name: white-house-lawn-white-house-window-attack-planes.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-attack-planes.jpg
+- name: old-school-house-old-schoolhouse-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-plentiful.jpg
+- name: store-on-corner-store-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-crafty-painting.jpg
+- name: san-francisco-street-view-san-francisco-street-view-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-blue-circuit.jpg
+- name: gears-4882162452-fa3126b38d-b-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-nazi-poster.jpg
+- name: san-francisco-street-view-san-francisco-street-view-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-bright-sand.jpg
+- name: rain-princess-DSC_0020.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-DSC_0020.jpg
+- name: downtown-los-angeles-downtown-la-dark-soul.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-dark-soul.JPG
+- name: downtheline-downtheline-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-clean-view.jpg
+- name: copper-circuit-walk-through-garden-tunnel.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-walk-through-garden-tunnel.jpg
+- name: san-francisco-street-view-san-francisco-street-view-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-ww2-color.jpg
+- name: san-francisco-street-view-san-francisco-street-view-copper-circuit-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-copper-circuit-2.jpg
+- name: white-house-lawn-white-house-window-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-crafty-painting.jpg
+- name: legal-statue-legalstatue-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-monet-one.jpg
+- name: crow_purple_pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_purple_pond.jpg
+- name: windowmountain-window-mountain-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-satan-red.jpg
+- name: stories-machine-road-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-machine-road-copper-circuit.jpg
+- name: nazi-invasion-desert-road-mountains.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-desert-road-mountains.jpg
+- name: rockingchair-rockingchair-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-emily-carr.jpg
+- name: braceros-domingo-ulloa-destruction-seattle-viaduct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-destruction-seattle-viaduct.jpg
+- name: aws-s3-stories-old-barn.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-old-barn.jpg
+- name: bf-skinner-working-on-railroad-1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-working-on-railroad-1.jpg
+- name: rockingchair-rockingchair-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-dark-dali.jpg
+- name: oldhousecars-house-old-cars-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-purp-paper.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-china-prop.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-china-prop.JPG
+- name: legal-statue-legalstatue-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-kand-two.jpg
+- name: abe-lincoln-one-purple-pond-file-00-00-07-91.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-purple-pond-file-00-00-07-91.jpg
+- name: razorwire-DSC-0080-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-yellow-paper.jpg
+- name: old-house-oldhouse-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-kand-two.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-free-woman.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-free-woman.jpg
+- name: oldroad-old-road-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-oily-mcoilface.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-crabapple.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-crabapple.png
+- name: los-angeles-from-observatory-losangeles-from-observatory-blue-circuit-5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-blue-circuit-5.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-emily-carr.jpg
+- name: downtown-fredericksburg-kand-two.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-kand-two.JPG
+- name: nazi-invasion-razor-wire-buildings.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-razor-wire-buildings.jpg
+- name: oldtrain-oldtrain-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-post-modern.jpg
+- name: old-door-lock-old-door-lock-2-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-blue-circuit.jpg
 ---
 'Patriot Way,' Burgeoning 'Titan Way' Collide In Playoffs.&nbsp;ThedaCare Cardiologist Explains Ways To Stay Safe While Doing Snow Removal.&nbsp;Bicyclist Struck On Christmas Eve Dies From His Injuries.&nbsp;Visit Boston's Classic Restaurants, And Other Weekend Food Goals.&nbsp;Warrant Issued For West Point Man Connected To Fatal Shooting.&nbsp;Bryan Stevenson Biographical Film 'Just Mercy'.&nbsp;Start Fresh Every Day.&nbsp;Voters Have New Leeway On Sales Tax In Granite Shoals.&nbsp;
